--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,9 +2,12 @@ name: Daily BMS Rankings
 
 on:
   schedule:
-    # 4:00 AM IST = 22:30 UTC (previous day)
+    # 4:00 AM IST = 22:30 UTC
     - cron: "30 22 * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write   # 🔥 THIS FIXES 403
 
 jobs:
   run-script:
@@ -13,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true   # important
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -20,17 +25,15 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run Script
-        run: |
-          python bms_rankings.py
+        run: python bms_rankings.py
 
       - name: Commit and Push Results
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Data Trash
           git commit -m "Daily rankings update" || echo "No changes"
           git push
